--- a/src/UnityContainerAttributeRegistration/UnityContainerAttributeRegistration.csproj
+++ b/src/UnityContainerAttributeRegistration/UnityContainerAttributeRegistration.csproj
@@ -18,6 +18,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="csharpguidelinesanalyzer" Version="3.5.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
       <PackageReference Include="Unity" Version="5.11.7" />
     </ItemGroup>
