--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,19 @@
 sonar.projectKey= ManticSic:UnityContainerAttributeRegistration
 sonar.organization=manticsic
-
 sonar.projectName=UnityContainerAttributeRegistration
 
+sonar.sourceEncoding=UTF-8
+
+# =====================================================
+#   Meta-data for the project
+# =====================================================
+sonar.links.homepage=https://github.com/ManticSic/UnityContainerAttributeRegistration
+sonar.links.ci=https://travis-ci.org/github/ManticSic/UnityContainerAttributeRegistration
+sonar.links.scm=https://github.com/ManticSic/UnityContainerAttributeRegistration
+sonar.links.issue=https://github.com/ManticSic/UnityContainerAttributeRegistration/issues
+
+sonar.language=cs
 sonar.sources=./src
 
-sonar.sourceEncoding=UTF-8
+sonar.dotnet.visualstudio.solution.file=UnityContainerAttributeRegistration.sln
+sonar.dotnet.version=3.1
