--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.links.scm=https://github.com/ManticSic/UnityContainerAttributeRegistration
 sonar.links.issue=https://github.com/ManticSic/UnityContainerAttributeRegistration/issues
 
 sonar.language=cs
-sonar.sources=./src
+sonar.sources=./src/UnityContainerAttributeRegistration
 
 sonar.dotnet.visualstudio.solution.file=UnityContainerAttributeRegistration.sln
 sonar.dotnet.version=3.1
