Update Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ script:
 before_deploy:
   - echo $(pwd)
   - echo "UnityContainerAttributeRegistration.${TRAVIS_TAG}.nupkg"
-  - ls -la
   - dotnet pack --configuration release --verbosity minimal -p:PackageVersion=$TRAVIS_TAG -p:RepositoryBranch=$TRAVIS_BRANCH -p:RepositoryCommit=$TRAVIS_COMMIT -p:PackageOutputPath=../..
+  - ls -la
 
 deploy:
   provider: releases
@@ -42,6 +42,6 @@ deploy:
   on:
     tags: true
 
-#after_deploy:
-#  - dotnet nuget add source https://nuget.pkg.github.com/ManticSic/index.json -n github -u ManticSic -p $GH_TOKEN
-#  - dotnet nuget push "UnityContainerAttributeRegistration.${TRAVIS_TAG}.nupkg" --source "github"
+after_deploy:
+  - dotnet nuget add source https://nuget.pkg.github.com/ManticSic/index.json -n github -u ManticSic -p $GH_TOKEN
+  - dotnet nuget push "UnityContainerAttributeRegistration.${TRAVIS_TAG}.nupkg" --source "github"
