--- a/src/UnityContainerAttributeRegistrationTest/UnityContainerAttributeRegistrationTest.csproj
+++ b/src/UnityContainerAttributeRegistrationTest/UnityContainerAttributeRegistrationTest.csproj
@@ -8,6 +8,18 @@
         <RootNamespace>UnityContainerAttributeRegistrationTest</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <WarningsAsErrors />
+      <NoWarn />
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <WarningsAsErrors />
+      <NoWarn />
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="csharpguidelinesanalyzer" Version="3.5.0">
           <PrivateAssets>all</PrivateAssets>
