Update Travis CI
- add readme to release
- add changelog to release

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,10 @@ deploy:
   provider: releases
   api_key: "$GH_TOKEN"
   file_glob: true
-  file: "UnityContainerAttributeRegistration.${TRAVIS_TAG}.nupkg"
+  file: 
+    - "UnityContainerAttributeRegistration.${TRAVIS_TAG}.nupkg"
+    - "README.md"
+    - "CHANGELOG.md"
   skip_cleanup: true
   overwrite: true
   on:
