--- a/src/UnityContainerAttributeRegistration/UnityContainerAttributeRegistration.csproj
+++ b/src/UnityContainerAttributeRegistration/UnityContainerAttributeRegistration.csproj
@@ -29,6 +29,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>AV2305,CS1591</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
